[package]
name = "rusnel"
description = "Rusnel is a fast TCP/UDP tunnel, transported over and encrypted using QUIC protocol. Single executable including both client and server"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/guyte149/Rusnel"
documentation = "https://docs.rs/rusnel"
homepage = "https://github.com/guyte149/Rusnel"
readme = "README.md"
keywords = ["tunnel", "socks", "quic", "rusnel"]
categories = ["network-programming"]

[dependencies]
clap = { version = "4.5.9", features = ["derive", "color", "suggestions", "cargo"] }
quinn = "0.11.2"
tokio = { version = "1.38.1", features = ["full"] }
rcgen = "0.13.1"
rustls = { version = "0.23.11", features = ["ring"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
rmp-serde = "1"
serde = { version = "1.0.*", features = ["derive"] }
anyhow = "1.0.86"
futures = "0.3.31"
sha2 = "0.11.0"
rustls-pemfile = "2.2.0"
dirs = "6.0.0"

[lints.clippy]
unwrap_used = "deny"

[profile.release]
strip = true          # Remove symbols - significantly reduces binary size
lto = true            # Link-time optimization - removes dead code across crates
codegen-units = 1     # Better optimization (slower compile)
panic = "abort"       # Smaller panic handling (no unwinding)

[[bin]]
name = "rusnel"
