[package]
name = "rusnel"
description = "Rusnel is a fast TCP/UDP tunnel, transported over and encrypted using QUIC protocol. Single executable including both client and server"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/guyte149/Rusnel"
documentation = "https://docs.rs/rusnel"
homepage = "https://github.com/guyte149/Rusnel"
readme = "README.md"
keywords = ["tunnel", "socks", "quic", "rusnel"]
categories = ["network-programming"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "color", "suggestions", "cargo"] }
quinn = "0.11.9"
tokio = { version = "1.52.1", features = ["full"] }
rcgen = { version = "0.14.7", features = ["x509-parser"] }
rustls = { version = "0.23.40", features = ["ring"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "ansi", "json", "time"] }
time = { version = "0.3", features = ["formatting", "macros"] }
rmp-serde = "1"
serde = { version = "1.0.*", features = ["derive"] }
anyhow = "1.0.102"
futures = "0.3.32"
sha2 = "0.11.0"
rustls-pemfile = "2.2.0"
dirs = "6.0.0"
bytes = "1.11.1"
dashmap = "6.1.0"
serde_json = "1"
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "matched-path", "query"] }
hyper = { version = "1", default-features = false, features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
http-body-util = "0.1"
tower = { version = "0.5", default-features = false, features = ["util"] }

[lints.clippy]
unwrap_used = "deny"
# `expect_used` and `panic` are intentionally NOT denied.

[profile.release]
strip = true          # Remove symbols - significantly reduces binary size
lto = true            # Link-time optimization - removes dead code across crates
codegen-units = 1     # Better optimization (slower compile)
panic = "abort"       # Smaller panic handling (no unwinding)

[[bin]]
name = "rusnel"
